--- a/core/src/components/@medgrupo/global/med-chart-radial/med-chart-radial.scss
+++ b/core/src/components/@medgrupo/global/med-chart-radial/med-chart-radial.scss
@@ -36,6 +36,10 @@
   }
 }
 
+:host(.med-chart-radial--lg) {
+  --size-default: 125px;
+}
+
 // ////////////////////
 // Variacao
 // ////////////////////
