--- a/core/src/components/@medgrupo/global/med-list-item/med-list-item.scss
+++ b/core/src/components/@medgrupo/global/med-list-item/med-list-item.scss
@@ -33,8 +33,8 @@
     margin: 0;
     padding: 0;
     font-size: var(--font-size-title);
-    font-weight: var(--font-weight-light);
-    line-height: var(--line-height-compressed);
+    font-weight: var(--med-font-weight-light);
+    line-height: var(--med-line-height-compressed);
     color: var(--color-title);
   }
 
@@ -42,8 +42,8 @@
     margin: 0;
     padding: 0;
     font-size: var(--font-size-label);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-compressed);
+    font-weight: var(--med-font-weight-regular);
+    line-height: var(--med-line-height-compressed);
     color: var(--color-label);
     margin-top: var(--med-spacing-inline-nano);
   }
