--- a/core/src/components/@medgrupo/global/med-chart-radial-content/med-chart-radial-content.scss
+++ b/core/src/components/@medgrupo/global/med-chart-radial-content/med-chart-radial-content.scss
@@ -1,12 +1,14 @@
 :host {
   --color: #{color('neutral', 10)};
+  --font-size-label: var(--med-font-size-nano);
+  --font-size-number: var(--med-font-size-md);
 }
 
 :host(.med-chart-radial-content) {
   text-align: center;
 
   .med-chart-radial-content__label {
-    font-size: var(--med-font-size-nano);
+    font-size: var(--font-size-label);
     color: var(--color);
     font-weight: var(--med-font-weight-bold);
     display: flex;
@@ -16,7 +18,7 @@
 
   .med-chart-radial-content__number {
     font-weight: var(--med-font-weight-bold);
-    font-size: var(--med-font-size-md);
+    font-size: var(--font-size-number);
     color: var(--color);
     line-height: var(--med-line-height-compressed);
 
@@ -48,4 +50,10 @@
 
 :host(.med-color-feedback) {
   color: #{curr-color('feedback')};
+}
+
+
+:host(.med-chart-radial-content--lg) {
+  --font-size-label: var(--med-font-size-xxxs);
+  --font-size-number: var(--med-font-size-lg);
 }
