ajustes monta provas

--- a/core/src/components/@medgrupo/global/med-chart-radial-content/med-chart-radial-content.scss
+++ b/core/src/components/@medgrupo/global/med-chart-radial-content/med-chart-radial-content.scss
@@ -12,6 +12,7 @@
     color: var(--color);
     font-weight: var(--med-font-weight-bold);
     display: flex;
+    padding-bottom: 2px;
     justify-content: center;
     line-height: var(--med-line-height-compressed);
   }
