--- a/core/src/components/back-button/back-button.md.scss
+++ b/core/src/components/back-button/back-button.md.scss
@@ -479,671 +479,4 @@
     }
 }
 
-
-@import "../../../templarios/abstracts";
-
-:host {
-  --background: #{color('brand', 'gradient')};
-  --border-color: #{color('brand', '3')};
-  --color: #{color('brand', 'gradient', 'contrast')};
-
-  --bg-hover: #{color('brand', '3')};
-  --bg-hover-opacity: 1;
-  --border-color-hover: transparent;
-  --color-hover: #{color('brand', 'gradient', 'contrast')};
-
-  --bg-focused: #{color('brand', '3')};
-  --bg-focused-opacity: 1;
-  --border-color-focused: transparent;
-  --color-focused: #{color('brand', 'gradient', 'contrast')};
-
-  --bg-activated: transparent;
-  --bg-activated-opacity: 0;
-  --border-color-activated: transparent;
-  --color-activated: #{color('brand', 'gradient', 'contrast')};
-
-  --font-size: var(--med-font-size-xxs);
-  --font-weight: var(--med-font-weight-semibold);
-  --line-height: var(--med-line-height-compressed);
-  --padding: 0 var(--med-spacing-inline-xxs);
-  --padding-text: 0 var(--med-spacing-inline-xxxs);
-  --border-radius: var(--med-border-radius-pill);
-  --min-height: 48px;
-  --min-width: 48px;
-  --transition: background 300ms ease-out, color 300ms ease-out, border-color 300ms ease-out, opacity 300ms ease-out;
-
-  --icon-font-size: 24px;
-}
-
-:host {
-  min-height: var(--min-height);
-  min-width: var(--min-width);
-  height: auto;
-  font-size: var(--font-size);
-  font-weight: var(--font-weight);
-  text-transform: uppercase;
-  margin: 0;
-}
-
-:host .button-native {
-  padding: var(--padding);
-  min-height: var(--min-height);
-  line-height: var(--line-height);
-  box-shadow: none;
-}
-
-:host .button-inner__text {
-  padding: var(--padding-text);
-  display: flex;
-  align-items: center;
-}
-
-:host .button-native::after {
-  display: none;
-}
-
-:host .button-native::before {
-  @include button-state();
-  transition: var(--transition);
-}
-
-// ////////////////////
-// ion-ripple-effect
-// ////////////////////
-
-:host ion-ripple-effect {
-  --ripple-color: #{color('brand', '2')};
-  --ripple-opacity: 1;
-}
-
-// ////////////////////
-// ion-icon
-// ////////////////////
-
-ion-icon {
-  font-size: var(--icon-font-size);
-  stroke: var(--color);
-  transition: stroke 300ms ease-out;
-}
-
-// ////////////////////
-// icon-only
-// ////////////////////
-
-:host(.back-button-has-icon-only) {
-  --padding: 0;
-  --padding-text: 0;
-  --border-radius: var(--med-border-radius-pill);
-  --min-height: 48px;
-  --min-width: 48px;
-  --icon-font-size: 32px;
-}
-
-// //////////////////////////////
-// sizes
-// //////////////////////////////
-
-:host(.med-button--md) {
-  --min-height: 48px;
-  --min-height: 48px;
-  --icon-font-size: 24px;
-}
-
-:host(.med-button--md.back-button-has-icon-only) {
-  --min-height: 48px;
-  --min-width: 48px;
-  --icon-font-size: 32px;
-}
-
-
-
-
-
-:host(.med-button--sm) {
-  --min-height: 40px;
-  --min-height: 40px;
-  --icon-font-size: 24px;
-}
-
-:host(.med-button--sm.back-button-has-icon-only) {
-  --min-height: 40px;
-  --min-width: 40px;
-  --icon-font-size: 24px;
-}
-
-
-
-
-
-:host(.med-button--xs) {
-  --min-height: 32px;
-  --min-width: 32px;
-  --padding: 0 var(--med-spacing-inline-base);
-  --font-size: var(--med-font-size-xxxs);
-  --icon-font-size: 16px;
-}
-
-:host(.med-button--xs.back-button-has-icon-only) {
-  --min-height: 32px;
-  --min-width: 32px;
-  --icon-font-size: 24px;
-}
-
-
-
-
-:host(.med-button--xxs) {
-  --min-height: 24px;
-  --min-width: 24px;
-  --padding: 0 var(--med-spacing-inline-xxxs);
-  --font-size: var(--med-font-size-nano);
-  --icon-font-size: 16px;
-}
-
-:host(.med-button--xxs.back-button-has-icon-only) {
-  --min-height: 24px;
-  --min-width: 24px;
-  --icon-font-size: 16px;
-}
-
-
-
-
-
-:host(.med-button--xxxs) {
-  --min-height: 16px;
-  --min-width: 16px;
-  --padding: 0;
-  --font-size: var(--med-font-size-nano);
-  --icon-font-size: 8px;
-}
-
-:host(.med-button--xxxs.back-button-has-icon-only) {
-  --min-height: 16px;
-  --min-width: 16px;
-  --icon-font-size: 8px;
-}
-
-// //////////////////////////////
-// states
-// //////////////////////////////
-
-// ////////////////////
-// hover
-// ////////////////////
-
-@media (any-hover: hover) {
-  :host(.med-button:hover) {
-    color: var(--color-hover);
-  }
-
-  :host(.med-button:hover) .button-native {
-    border-color: var(--border-color-hover);
-  }
-
-  :host(.med-button:hover) .button-native::before {
-    background: var(--bg-hover);
-    opacity: var(--bg-hover-opacity);
-  }
-
-  :host(.med-button:hover) ion-icon {
-    stroke: var(--color-hover);
-  }
-}
-
-// ////////////////////
-// focus
-// ////////////////////
-
-:host(.ion-focused) {
-  color: var(--color-focused);
-}
-
-:host(.ion-focused) .button-native {
-  border-color: var(--border-color-focused);
-}
-
-:host(.ion-focused) .button-native::before {
-  background: var(--bg-focused);
-  opacity: var(--bg-focused-opacity);
-  border-color: var(--border-color-focused);
-}
-
-:host(.ion-focused) ion-icon {
-  stroke: var(--color-focused);
-}
-
-// ////////////////////
-// activated
-// ////////////////////
-
-:host(.ion-activated) {
-  color: var(--color-activated);
-}
-
-:host(.ion-activated) .button-native {
-  border-color: var(--border-color-activated);
-}
-
-:host(.ion-activated) .button-native::before {
-  background: var(--bg-activated);
-  opacity: var(--bg-activated-opacity);
-}
-
-:host(.ion-activated) ion-icon {
-  stroke: var(--color-activated);
-}
-
-// ////////////////////
-// disabled
-// ////////////////////
-
-:host(.button-disabled) {
-  cursor: initial;
-  pointer-events: none;
-  opacity: var(--med-opacity-level-half);
-}
-
-// //////////////////////////////
-// color
-// //////////////////////////////
-
-:host(.med-color) {
-  --background: #{curr-color('color', 'gradient')};
-  --border-color: #{curr-color('color', '3')};
-  --color: #{curr-color('color', 'gradient', 'contrast')};
-
-  --bg-hover: #{curr-color('color', '3')};
-  --color-hover: #{curr-color('color', 'gradient', 'contrast')};
-
-  --bg-focused: #{curr-color('color', '3')};
-  --color-focused: #{curr-color('color', 'gradient', 'contrast')};
-  --color-activated: #{curr-color('color', 'gradient', 'contrast')};
-}
-
-:host(.med-color) ion-ripple-effect {
-  --ripple-color: #{curr-color('color', '2')};
-}
-
-// //////////////////////////////
-// neutral
-// //////////////////////////////
-
-:host(.med-color-neutral) {
-  --background: #{curr-color('neutral')};
-  --border-color: #{curr-color('neutral')};
-  --color: #{curr-color('neutral', null, 'contrast')};
-
-  --bg-hover: #{curr-color('neutral', null, 'contrast', var(--med-opacity-level-semitransparent))};
-  --color-hover: #{curr-color('neutral', null, 'contrast')};
-
-  --bg-focused: #{curr-color('neutral', null, 'contrast')};
-  --bg-focused-opacity: #{var(--med-opacity-level-semitransparent)};
-  --color-focused: #{curr-color('neutral', null, 'contrast')};
-
-  --color-activated: #{curr-color('neutral', null, 'contrast')};
-}
-
-:host(.med-color-neutral) ion-ripple-effect {
-  --ripple-color: #{curr-color('neutral', null, 'contrast')};
-  --ripple-opacity: #{var(--med-opacity-level-semitransparent)};
-}
-
-// //////////////////////////////
-// feedback
-// //////////////////////////////
-
-:host(.med-color-feedback) {
-  --background: #{curr-color('feedback')};
-  --border-color: #{curr-color('feedback')};
-  --color: #{curr-color('feedback', null, 'contrast')};
-
-  --bg-hover: #{curr-color('feedback', null, 'contrast', var(--med-opacity-level-semitransparent))};
-  --color-hover: #{curr-color('feedback', null, 'contrast')};
-
-  --bg-focused: #{curr-color('feedback', null, 'contrast')};
-  --bg-focused-opacity: #{var(--med-opacity-level-semitransparent)};
-  --color-focused: #{curr-color('feedback', null, 'contrast')};
-
-  --color-activated: #{curr-color('feedback', null, 'contrast')};
-}
-
-:host(.med-color-feedback) ion-ripple-effect {
-  --ripple-color: #{curr-color('feedback', null, 'contrast')};
-  --ripple-opacity: #{var(--med-opacity-level-semitransparent)};
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-:host(.med-button--secondary) {
-  --background: transparent;
-  --border-color: #{color('brand', '3')};
-  --color: #{color('brand', '3')};
-
-  --bg-hover: transparent;
-  --bg-hover-opacity: 0;
-  --border-color-hover: #{color('brand', '4')};
-  --color-hover: #{color('brand', '4')};
-
-  --bg-focused: transparent;
-  --bg-focused-opacity: 0;
-  --border-color-focused: #{color('brand', '4')};
-  --color-focused: #{color('brand', '4')};
-
-  --bg-activated: transparent;
-  --bg-activated-opacity: 0;
-  --border-color-activated: #{color('brand', '5')};
-
-  --color-activated: #{color('brand', '5')};
-
-  --border-width: var(--med-border-width-thin);
-  --border-style: solid;
-}
-
-:host(.med-button--secondary) ion-ripple-effect {
-  --ripple-color: transparent;
-  --ripple-opacity: transparent;
-}
-
-// ////////////////////
-// icon-only
-// ////////////////////
-
-:host(.back-button-has-icon-only) {
-  --min-height: 48px;
-  --min-width: 48px;
-  --icon-font-size: 32px;
-  --padding: 0;
-}
-
-// //////////////////////////////
-// color
-// //////////////////////////////
-
-:host(.med-button--secondary.med-color) {
-  --border-color: #{curr-color('color', '3')};
-  --color: #{curr-color('color', '3')};
-
-  --bg-hover: #{curr-color('color', '3')};
-  --color-hover: #{curr-color('color', 'gradient', 'contrast')};
-
-  --bg-focused: #{curr-color('color', '3')};
-  --color-focused: #{curr-color('color', 'gradient', 'contrast')};
-
-  --color-activated: #{curr-color('color', 'gradient', 'contrast')};
-}
-
-// //////////////////////////////
-// neutral
-// //////////////////////////////
-
-:host(.med-button--secondary.med-color-neutral) {
-  --border-color: #{curr-color('neutral')};
-  --color: #{curr-color('neutral')};
-
-  --border-color-hover: #{curr-color('neutral', null, null, var(--med-opacity-level-semiopaque))};
-  --color-hover: #{curr-color('neutral', null, null, var(--med-opacity-level-semiopaque))};
-
-  --border-color-focused: #{curr-color('neutral', null, null, var(--med-opacity-level-semiopaque))};
-  --color-focused: #{curr-color('neutral', null, null, var(--med-opacity-level-semiopaque))};
-
-  --border-color-activated: #{curr-color('neutral', null, null, var(--med-opacity-level-intense))};
-  --color-activated: #{curr-color('neutral', null, null, var(--med-opacity-level-intense))};
-}
-
-// //////////////////////////////
-// feedback
-// //////////////////////////////
-
-:host(.med-button--secondary.med-color-feedback) {
-  --border-color: #{curr-color('feedback')};
-  --color: #{curr-color('feedback')};
-
-  --border-color-hover: #{curr-color('feedback', null, null, var(--med-opacity-level-semiopaque))};
-  --color-hover: #{curr-color('feedback', null, null, var(--med-opacity-level-semiopaque))};
-
-  --border-color-focused: #{curr-color('feedback', null, null, var(--med-opacity-level-semiopaque))};
-  --color-focused: #{curr-color('feedback', null, null, var(--med-opacity-level-semiopaque))};
-
-  --border-color-activated: #{curr-color('feedback', null, null, var(--med-opacity-level-intense))};
-  --color-activated: #{curr-color('feedback', null, null, var(--med-opacity-level-intense))};
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-:host(.med-button--tertiary) {
-  --background: transparent;
-  --border-color: transparent;
-  --color: #{color('neutral', '10')};
-
-  --bg-hover: #{color('brand', '3')};
-  --bg-hover-opacity: var(--med-opacity-level-light);
-  --border-color-hover: transparent;
-  --color-hover: #{color('neutral', '10')};
-
-  --bg-focused: #{color('brand', '3')};
-  --bg-focused-opacity: var(--med-opacity-level-light);
-  --border-color-focused: transparent;
-  --color-focused: #{color('neutral', '10')};
-
-  --bg-activated: #{color('brand', '3')};
-  --bg-activated-opacity: var(--med-opacity-level-light);
-  --border-color-activated: transparent;
-  --color-activated: #{color('neutral', '10')};
-
-  --line-height: #{line-height($med-font-size-xxs)};
-  --padding: 0;
-  --padding-text: 0 var(--med-spacing-inline-xxxs);
-  --min-height: 24px;
-  --min-width: 24px;
-  --border-radius: var(--med-border-radius-nano);
-}
-
-:host(.med-button--tertiary) ion-ripple-effect {
-  --ripple-color: #{color('brand', '3')};
-  --ripple-opacity: var(--med-opacity-level-light);
-}
-
-// ////////////////////
-// icon-only
-// ////////////////////
-
-:host(.med-button--tertiary.back-button-has-icon-only) {
-  --padding: 0;
-  --padding-text: 0;
-  --border-radius: var(--med-border-radius-full);
-  --min-height: 32px;
-  --min-width: 32px;
-  --icon-font-size: 24px;
-}
-
-// ////////////////////
-// icon-only
-// ////////////////////
-
-:host(.med-button--tertiary.button-block) {
-  --border-radius: var(--med-border-radius-nano);
-}
-
-
-
-// //////////////////////////////
-// color
-// //////////////////////////////
-
-:host(.med-button--tertiary.med-color) {
-  --color: #{color('neutral', '10')};
-
-  --bg-hover: #{curr-color('color', '3')};
-  --color-hover: #{color('neutral', '10')};
-
-  --bg-focused: #{curr-color('color', '3')};
-  --color-focused: #{color('neutral', '10')};
-
-  --bg-activated: #{curr-color('color', '3')};
-  --color-activated: #{color('neutral', '10')};
-}
-
-:host(.med-button--tertiary.med-color) ion-ripple-effect {
-  --ripple-color: #{curr-color('color', '3')};
-  --ripple-opacity: var(--med-opacity-level-light);
-}
-
-// //////////////////////////////
-// neutral
-// //////////////////////////////
-
-:host(.med-button--tertiary.med-color-neutral) {
-  --color: #{color('neutral', '10')};
-
-  --bg-hover: #{color('neutral', '10')};
-  --color-hover: #{color('neutral', '10')};
-
-  --bg-focused: #{color('neutral', '10')};
-  --color-focused: #{color('neutral', '10')};
-
-  --bg-activated: #{color('neutral', '10')};
-  --color-activated: #{color('neutral', '10')};
-}
-
-:host(.med-button--tertiary.med-color-neutral) ion-ripple-effect {
-  --ripple-color: #{color('neutral', '10')};
-  --ripple-opacity: var(--med-opacity-level-light);
-}
-
-// //////////////////////////////
-// feedback
-// //////////////////////////////
-
-:host(.med-button--tertiary.med-color-feedback) {
-  --color: #{color('neutral', '10')};
-
-  --bg-hover: #{curr-color('feedback')};
-  --color-hover: #{color('neutral', '10')};
-
-  --bg-focused: #{curr-color('feedback')};
-  --color-focused: #{color('neutral', '10')};
-
-  --bg-activated: #{curr-color('feedback')};
-  --color-activated: #{color('neutral', '10')};
-}
-
-:host(.med-button--tertiary.med-color-feedback) ion-ripple-effect {
-  --ripple-color: #{curr-color('feedback')};
-  --ripple-opacity: var(--med-opacity-level-light);
-}
-
-// //////////////////////////////
-// sizes
-// //////////////////////////////
-
-:host(.med-button--tertiary.med-button--lg) {
-  --font-size: var(--med-font-size-xs);
-  --line-height: #{line-height($med-font-size-xs)};
-  --min-height: 24px;
-  --min-width: 24px;
-}
-
-:host(.med-button--tertiary.med-button--lg.back-button-has-icon-only) {
-  --min-height: 64px;
-  --min-width: 64px;
-  --icon-font-size: 48px;
-}
-
-
-
-
-
-:host(.med-button--tertiary.med-button--md) {
-  --font-size: var(--med-font-size-xxs);
-  --line-height: #{line-height($med-font-size-xxs)};
-  --min-height: 24px;
-  --min-width: 24px;
-}
-
-:host(.med-button--tertiary.med-button--md.back-button-has-icon-only) {
-  --min-height: 48px;
-  --min-width: 48px;;
-  --icon-font-size: 32px;
-}
-
-
-
-
-
-:host(.med-button--tertiary.med-button--sm) {
-  --font-size: var(--med-font-size-xxxs);
-  --line-height: #{line-height($med-font-size-xxxs)};
-  --min-height: 16px;
-  --min-width: 16px;
-}
-
-:host(.med-button--tertiary.med-button--sm.back-button-has-icon-only) {
-  --min-height: 40px;
-  --min-width: 40px;
-  --icon-font-size: 24px;
-}
-
-
-
-
-
-:host(.med-button--tertiary.med-button--xs) {
-  --font-size: var(--med-font-size-nano);
-  --line-height: #{line-height($med-font-size-nano)};
-  --min-height: 16px;
-  --min-width: 16px;
-}
-
-:host(.med-button--tertiary.med-button--xs.back-button-has-icon-only) {
-  --min-height: 32px;
-  --min-width: 32px;
-  --icon-font-size: 24px;
-}
-
-
-
-
-
-:host(.med-button--tertiary.med-button--xxs.back-button-has-icon-only) {
-  --min-height: 24px;
-  --min-width: 24px;
-  --icon-font-size: 24px;
-}
-
-
-
-
-
-:host(.med-button--tertiary.med-button--xxxs.back-button-has-icon-only) {
-  --min-height: 16px;
-  --min-width: 16px;
-  --icon-font-size: 16px;
-}
+@import './back-button.med.scss'
