--- a/core/src/components/@medgrupo/global/med-chart-radial-label/med-chart-radial-label.scss
+++ b/core/src/components/@medgrupo/global/med-chart-radial-label/med-chart-radial-label.scss
@@ -38,6 +38,6 @@
 }
 
 :host(.med-chart-radial-label--lg) {
-  --font-size-item: var(--med-font-size-xxxs);
+  --font-size-item: var(--med-font-size-xs);
   --font-size-quantia: var(--med-font-size-lg);
 }
