--- a/core/src/components/back-button/back-button.md.scss
+++ b/core/src/components/back-button/back-button.md.scss
@@ -479,4 +479,6 @@
     }
 }
 
-@import './back-button.med.scss'
+@import './medgrupo/back-button-default.med.scss';
+@import './medgrupo/back-button-secondary.med.scss';
+@import './medgrupo/back-button-tertiary.med.scss';
