--- a/core/src/components/toggle/toggle.ios.scss
+++ b/core/src/components/toggle/toggle.ios.scss
@@ -117,6 +117,15 @@
 }
 
 // ////////////////////
+// default
+// ////////////////////
+
+
+:host(.med-toggle) {
+  --background-checked: #{color('brand', '3')};
+}
+
+// ////////////////////
 // color
 // ////////////////////
 
