test(): fix typo

--- a/core/src/components/picker-internal/test/basic/index.html
+++ b/core/src/components/picker-internal/test/basic/index.html
@@ -140,7 +140,7 @@
         { text: 'Tomatos', value: 'tomato' },
         { text: 'Avocados', value: 'avocado' },
         { text: 'Onions', value: 'onion' },
-        { text: 'Potatos', value: 'potato' },
+        { text: 'Potatoes', value: 'potato' },
         { text: 'Artichokes', value: 'artichoke' },
       ], 'onion');
 
