test(select): add popover with number values

--- a/core/src/components/select/test/basic/index.html
+++ b/core/src/components/select/test/basic/index.html
@@ -173,6 +173,15 @@
           </ion-select>
         </ion-item>
 
+        <ion-item>
+          <ion-label>Numbers</ion-label>
+          <ion-select interface="popover">
+            <ion-select-option value="5">5</ion-select-option>
+            <ion-select-option value="10">10</ion-select-option>
+            <ion-select-option value="15">15</ion-select-option>
+          </ion-select>
+        </ion-item>
+
       </ion-list>
 
       <ion-list>
