feat(header, footer): base implementation

--- a/core/src/components/footer/footer.ios.scss
+++ b/core/src/components/footer/footer.ios.scss
@@ -24,3 +24,13 @@
 .footer-ios.ion-no-border ion-toolbar:first-of-type {
   --border-width: 0;
 }
+
+// iOS Footer - Collapse Fade
+// --------------------------------------------------
+.footer-collapse-fade {
+  --opacity: 0;
+}
+
+.footer-collapse-fade ion-toolbar {
+  --opacity: inherit;
+}
