--- a/core/src/components/picker-internal/test/basic/index.html
+++ b/core/src/components/picker-internal/test/basic/index.html
@@ -59,14 +59,20 @@
               <ion-picker-column-internal id="second"></ion-picker-column-internal>
             </ion-picker-internal>
           </div>
-          <div class="grid">
-            <div class="grid-item">
-              <h2>Numeric Input</h2>
-              <ion-picker-internal>
-                <ion-picker-column-internal numeric-input="true" id="numeric-first"></ion-picker-column-internal>
-                <ion-picker-column-internal id="numeric-second"></ion-picker-column-internal>
-              </ion-picker-internal>
-            </div>
+          <div class="grid-item">
+            <h2>One Numeric Input</h2>
+            <ion-picker-internal>
+              <ion-picker-column-internal numeric-input="true" id="numeric-first"></ion-picker-column-internal>
+              <ion-picker-column-internal id="numeric-second"></ion-picker-column-internal>
+            </ion-picker-internal>
+          </div>
+          <div class="grid-item">
+            <h2>Two Numeric Input</h2>
+            <ion-picker-internal>
+              <ion-picker-column-internal numeric-input="true" id="dual-numeric-first"></ion-picker-column-internal>
+              <ion-picker-column-internal numeric-input="true" id="dual-numeric-second"></ion-picker-column-internal>
+            </ion-picker-internal>
+          </div>
           <div class="grid-item">
             <h2>Popover</h2>
             <ion-button id="popover">Open Picker</ion-button>
@@ -145,6 +151,22 @@
         { text: 'Potatoes', value: 'potato' },
         { text: 'Artichokes', value: 'artichoke' },
       ], 'onion');
+
+      setPickerColumn('#dual-numeric-first', [
+        { text: '12', value: 12 },
+        { text: '01', value: 1 },
+        { text: '02', value: 2 },
+        { text: '03', value: 3 },
+        { text: '04', value: 4 },
+        { text: '05', value: 5 },
+        { text: '06', value: 6 },
+        { text: '07', value: 7 },
+        { text: '08', value: 8 },
+        { text: '09', value: 9 },
+        { text: '10', value: 10 },
+        { text: '11', value: 11 },
+      ], 3);
+      setPickerColumn('#dual-numeric-second', minutes, 3);
 
       setPickerColumn('#popover-first', [
         { text: 'Minified', value: 'minified' },
