fix(picker-column): only emit ionChange if selected value is different

--- a/core/src/components/picker-internal/test/basic/index.html
+++ b/core/src/components/picker-internal/test/basic/index.html
@@ -107,6 +107,10 @@
     </ion-app>
 
     <script>
+      const column = document.querySelector('ion-picker-column-internal');
+      column.addEventListener('ionChange', (ev) => {
+        console.log('Column change', ev.detail);
+      })
       const setPickerColumn = (selector, items, value) => {
         const picker = document.querySelector(selector);
 
