--- a/core/src/components/picker-internal/test/basic/index.html
+++ b/core/src/components/picker-internal/test/basic/index.html
@@ -129,6 +129,7 @@
         { text: 'Full Stack', value: 'full-stack' },
         { text: 'Mobile First', value: 'mobile-first' },
         { text: 'Serverless', value: 'serverless' },
+        { text: 'A really really really really long value', value: 'long' }
       ], 'full-stack');
 
       setPickerColumn('#second', [
@@ -150,7 +151,7 @@
       setPickerColumn('#numeric-first', minutes, 3);
 
       setPickerColumn('#numeric-second', [
-        { text: 'Tomatos', value: 'tomato' },
+        { text: 'Tomatoes', value: 'tomato' },
         { text: 'Avocados', value: 'avocado' },
         { text: 'Onions', value: 'onion' },
         { text: 'Potatoes', value: 'potato' },
